kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tt-scheduler
  name: tt-scheduler-service
  labels:
    app: tt-scheduler-service
spec:
  ports:
    - port: 5000
      name: api-port
  clusterIP: None
  selector:
    app: tt-scheduler-backend
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: venus-lounge-management
  name: venus-guard-backend
spec:
  selector:
    matchLabels:
      app: tt-scheduler-backend
  serviceName: tt-scheduler-service
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: tt-scheduler-backend
    spec:
      terminationGracePeriodSeconds: 10
      imagePullSecrets:
        - name: app-cc-secret-github-dockerconfig
      volumes:
        - name: logs
          emptyDir: {}
      containers:
        - name: tt-scheduler-backend
          image: ghcr.io/terratex-community/tt-scheduler-backend:${IMAGE_TAG}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: api-port
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              port: api-port
              path: /state/health
